templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetesenterprise
  namespace: kubernetesenterprise
  labels:
    app: kubernetesenterprise
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kubernetesenterprise.ipgrup.com
      secretName: kubernetesenterprise-tls
  rules:
  - host: kubernetesenterprise.ipgrup.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetesenterprise
            port:
              number: 8070
